# neko-history

./: .gitignore  PROJECT.md  README.md  pyproject.toml
assets/character/: CHARACTER.md
config/: settings.example.yaml
data/sample_scripts/: japan_01_great_fire_of_meireki.md
src/mochi/: __init__.py  cli.py  config.py
src/mochi/models/: script.py
src/mochi/services/: assembler.py  image_gen.py  publisher.py  script_writer.py  tracker.py  video_gen.py  voice.py
