[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mochi-cli"
version = "0.1.0"
description = "AI-powered POV history video production agent starring Mochi the cat"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
publish = [
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mochi = "mochi.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mochi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
